--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Description: More about what it does (maybe more than one line).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/smithspy01/MATH4753F25thayer
+BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
