--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: MATH4753F25thayer
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Lab work 2025
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
-      role = c("aut", "cre")
+      "Thayer", "Smith",
+      email = "thayer.a.smith-1@ou.edu",
+      role = c("student", "None")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
+Description: Lab code for 2025
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/smithspy01/MATH4753F25thayer
 BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
+
