--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/smithspy01/MATH4753F25thayer
 BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
-
+RoxygenNote: 7.3.2
