--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person(
       "Thayer", "Smith",
       email = "thayer.a.smith-1@ou.edu",
-      role = c("student", "None")
+      role = c("student", "cre")
     )
   )
 Description: Lab code for 2025
@@ -15,4 +15,3 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/smithspy01/MATH4753F25thayer
 BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
-RoxygenNote: 7.3.2
