--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,12 +6,13 @@ Authors@R: c(
     person(
       "Thayer", "Smith",
       email = "thayer.a.smith-1@ou.edu",
-      role = c("student", "cre")
+      role = c("aut", "cre")
     )
   )
-Description: Lab code for 2025
+Description: Lab work for 2025
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/smithspy01/MATH4753F25thayer
 BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
+RoxygenNote: 7.3.2
