--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,7 @@ LazyData: true
 URL: https://github.com/smithspy01/MATH4753F25thayer
 BugReports: https://github.com/smithspy01/MATH4753F25thayer/issues
 RoxygenNote: 7.3.2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
