--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(mybin)
 export(myfirstfunction)
 export(myncurve)
 export(mysum)
+export(ntickets)
 export(scatterhist)
 importFrom(graphics,barplot)
 importFrom(graphics,hist)
