--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(myncurve)
 export(mysum)
 export(ntickets)
 export(scatterhist)
+export(shinymle)
 importFrom(graphics,barplot)
 importFrom(graphics,hist)
 importFrom(graphics,layout)
